--- a/package.json
+++ b/package.json
@@ -17,35 +17,52 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
+    "@types/nodemailer": "^6.4.15",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "cobe": "^0.6.3",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.3.21",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.334.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.1.3",
     "next-cloudinary": "^5.20.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.14",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.2.1",
     "sharp": "^0.33.2",
-    "tailwind-merge": "^2.2.1",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
+    "three-globe": "^2.31.1",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
@@ -55,6 +72,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-responsive": "^8.0.8",
+    "@types/three": "^0.167.1",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
