--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tsparticles/slim": "^3.5.0",
     "@types/nodemailer": "^6.4.15",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
