Update dependencies and enhance layout with site settings
- Added `@radix-ui/react-switch` version 1.2.2 to dependencies.
- Updated `framer-motion` to version 11.18.2.
- Modified `RootLayout` to include query client initialization and prefetch site settings.
- Added `SmoothCursor` component to the layout for improved user experience.
- Introduced new `SiteSettings` model in Prisma schema and updated `sidelinks` to include a link for site settings.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
@@ -44,7 +45,7 @@
     "cobe": "^0.6.3",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.334.0",
     "mini-svg-data-uri": "^1.4.4",
