--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/table-core": "^8.20.5",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -55,7 +56,7 @@
     "cobe": "^0.6.3",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.18.2",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.334.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -95,6 +96,6 @@
     "postcss": "^8",
     "prisma": "^6.13.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
