--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -40,6 +40,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^2.47.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
     "@tanstack/react-table": "^8.21.3",
@@ -71,6 +72,7 @@
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "recharts": "^2.15.4",
     "sharp": "^0.33.2",
     "simplex-noise": "^4.0.3",
@@ -94,7 +96,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^6.13.0",
+    "prisma": "^6.17.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.9.2"
   }
