--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.31.3",
+    "@clerk/nextjs": "^6.36.3",
     "@clerk/themes": "^1.7.9",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
@@ -61,18 +61,19 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.334.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.1.3",
+    "next": "^16.0.10",
     "next-cloudinary": "^5.20.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.14",
     "qss": "^3.0.0",
-    "react": "^18",
+    "react": "^19.2.3",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
+    "react-dom": "^19.2.3",
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
+    "react-quill-new": "^3.6.0",
     "recharts": "^2.15.4",
     "sharp": "^0.33.2",
     "simplex-noise": "^4.0.3",
@@ -87,17 +88,17 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-responsive": "^8.0.8",
     "@types/three": "^0.167.1",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "prisma": "^6.17.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
