--- a/package.json
+++ b/package.json
@@ -86,6 +86,20 @@
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "react-is": "$react",
+    "next": "$next",
+    "eslint": "$eslint",
+    "@react-three/drei": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    },
+    "next-cloudinary": {
+      "next": "$next"
+    }
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19.2.7",
