--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "next": "^16.0.10",
     "next-cloudinary": "^5.20.0",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.14",
+    "nodemailer": "^7.0.11",
     "qss": "^3.0.0",
     "react": "^19.2.3",
     "react-day-picker": "^8.10.0",
@@ -97,7 +97,9 @@
       "react-dom": "$react-dom"
     },
     "next-cloudinary": {
-      "next": "$next"
+      "next-cloudinary": {
+        "next": "$next"
+      }
     }
   },
   "devDependencies": {
