--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -64,7 +65,7 @@
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.334.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^16.0.10",
+    "next": "^16.1.6",
     "next-cloudinary": "^5.20.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.11",
@@ -72,10 +73,12 @@
     "react": "^19.2.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "^19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.2.1",
-    "react-quill": "^2.0.0",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^0.0.2",
     "react-quill-new": "^3.6.0",
     "recharts": "^2.15.4",
     "sharp": "^0.33.2",
@@ -113,7 +116,7 @@
     "@types/three": "^0.167.1",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9",
     "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "prisma": "^6.17.1",
