Enhance SEO and metadata handling across public pages
- Updated middleware to explicitly allow indexing for public routes by setting the 'X-Robots-Tag' header.
- Refactored metadata handling in certification, education, experience, and tech stack pages to use a new `generateMetadata` function, improving consistency and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_UPLOAD_PRESET=
 # Google Analytics measurement ID
 NEXT_PUBLIC_MEASUREMENT_ID=
+# Vercel environment and node environment
+VERCEL_ENV=development # development, production, preview
+NODE_ENV=development # development, production, preview
+SITE_URL=http://localhost:3000 # your site URL
+# Public site URL
+NEXT_PUBLIC_SITE_URL=http://localhost:3000 # your site URL
